2319: Widget changes for wealth

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -33,12 +33,12 @@
                   'fa-trophy fa-lg': widget.WidgetName == 'GreenbacksTotalRewardPoints',
                   'fa-image fa-lg' : widget.WidgetName == 'Image',
                   'icon-videoWidget' : widget.WidgetName == 'Video',
-                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary',
+                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary',
                   'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation' || widget.WidgetName == 'SpecialMessage' || widget.WidgetName == 'PortfolioReminders',
                   'icon-rp-loss1 fa-lg' : widget.WidgetName == 'InvestmentPortfolioRisk',
                   'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
                   'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance' || widget.WidgetName == 'PersonalLoanPaymentDue',
-                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown',
+                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'InvestmentWealthPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown',
                   'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend' || widget.WidgetName == 'InvestorPerformance',
                   'icon-TransactionMixWidget' : widget.WidgetName == 'TransactionMix',
                   'icon-rp-production1' : widget.WidgetName == 'SpendingTrend',
