--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -403,6 +403,19 @@
     font-family: sans-serif;
   }
 
+  .card-body-header-w {
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: #2d6444 !important;
+  }
+
+  .card-body-header-name-w {
+    font-size: 14pt;
+    color: #2d6444 !important;
+    font-weight: bolder;
+    font-family: sans-serif;
+  }
+
   .card-body-sub-header {
     font-size: 12pt;
     color: #005b00 !important;
