2319: widget changes for wealth

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -39,14 +39,14 @@
                   'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
                   'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance' || widget.WidgetName == 'PersonalLoanPaymentDue',
                   'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'InvestmentWealthPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown',
-                  'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend' || widget.WidgetName == 'InvestorPerformance',
+                  'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend' || widget.WidgetName == 'InvestorPerformance' || widget.WidgetName == 'WealthInvestorPerformance',
                   'icon-TransactionMixWidget' : widget.WidgetName == 'TransactionMix',
                   'icon-rp-production1' : widget.WidgetName == 'SpendingTrend',
-                  'fa-newspaper-o' : widget.WidgetName == 'NewsAlerts' || widget.WidgetName == 'NedbankService' || widget.WidgetName == 'PortfolioNewsAlerts',
+                  'fa-newspaper-o' : widget.WidgetName == 'NewsAlerts' || widget.WidgetName == 'NedbankService' || widget.WidgetName == 'WealthNedbankService' || widget.WidgetName == 'PortfolioNewsAlerts',
                   'fa-credit-card' : widget.WidgetName == 'CurrentTransaction',
                   'icon-rp-quality1' : widget.WidgetName == 'Top4IncomeSources',
                   'fa-university' : widget.WidgetName == 'BranchDetails',
-                  'fa-list' : widget.WidgetName == 'ExplanatoryNotes',
+                  'fa-list' : widget.WidgetName == 'ExplanatoryNotes' || widget.WidgetName == 'WealthExplanatoryNotes',
                   'fa-exclamation-circle' : widget.WidgetName == 'PL_InsuranceMessage'  || widget.WidgetName == 'HomeLoanPaymentDueSpecialMsg',
                   'fa-table fa-lg': widget.WidgetType == 'Table' || widget.WidgetName == 'HomeLoanInstalmentDetail',
                   'fa-list-alt fa-lg': widget.WidgetType == 'Form' || widget.WidgetName == 'GreenbacksContactUs',
