--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -359,6 +359,12 @@
     font-family: 'Mark Pro Bold';
   }
 
+  .serviceHeaderW {
+    font-size: 10pt;
+    color: purple !important;
+    font-family: 'Mark Pro Bold';
+  }
+
   .LoanTransactionTable th {
     background-color: #1c6a41 !important;
     color: #fff;
@@ -377,6 +383,12 @@
     font-family: 'Mark Pro Regular';
   }
 
+  .InvestmentBreakdownW thead {
+    background-color: black !important;
+    color: #fff;
+    font-family: 'Mark Pro Regular';
+  }
+
   .InvestmentBreakdown tbody {
     font-family: 'Mark Pro Regular';
   }
@@ -387,6 +399,11 @@
 
   .InvestmentDetail td span {
     color: #005b00 !important;
+    font-family: 'Mark Pro Regular';
+  }
+
+  .InvestmentDetailW td span {
+    color: purple !important;
     font-family: 'Mark Pro Regular';
   }
 
@@ -406,12 +423,12 @@
   .card-body-header-w {
     font-size: 14pt;
     font-family: 'Mark Pro Bold';
-    color: #2d6444 !important;
+    color: black !important;
   }
 
   .card-body-header-name-w {
     font-size: 14pt;
-    color: #2d6444 !important;
+    color: black !important;
     font-weight: bolder;
     font-family: sans-serif;
   }
@@ -437,6 +454,14 @@
   }
 
   .TotalAmountDetailsDiv {
+    background-color: #2d6444 !important;
+    padding: 10px 25px;
+    height: 60px;
+    color: #fff !important;
+    font-family: 'Mark Pro Regular';
+  }
+
+  .TotalAmountDetailsDivW {
     background-color: #2d6444 !important;
     padding: 10px 25px;
     height: 60px;
@@ -657,8 +682,18 @@
     color: #005b00 !important;
   }
 
+  .text-success-w {
+    color: purple !important;
+  }
+
   .InvestmentProdDesc {
     color: #005b00 !important;
+    font-family: 'Mark Pro Bold';
+    font-size: 12pt;
+  }
+
+  .InvestmentProdDescW {
+    color: purple !important;
     font-family: 'Mark Pro Bold';
     font-size: 12pt;
   }
