2319: wealth investment widgets changes

--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -462,7 +462,7 @@
   }
 
   .TotalAmountDetailsDivW {
-    background-color: #2d6444 !important;
+    background-color: black !important;
     padding: 10px 25px;
     height: 60px;
     color: #fff !important;
