Supporting new NB tables

--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -2069,6 +2069,14 @@
         font-size: 14px;
     }
 
+    .ServicesDiv250 {
+        background-color: #f3f3f3;
+        height: 250px;
+        font-family: 'Mark Pro Regular';
+        padding: 1.5rem !important;
+        font-size: 8pt;
+    }
+
     .serviceHeader {
         font-size: 16px;
         color: #2d6444 !important;
