--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -349,6 +349,14 @@
     font-size: 8pt;
   }
 
+  .ServicesDiv250 {
+    background-color: #f3f3f3;
+    height: 250px;
+    font-family: 'Mark Pro Regular';
+    padding: 1.5rem !important;
+    font-size: 8pt;
+  }
+
   .ServicesDiv p {
     margin-bottom: 0.5rem !important;
   }
