Changes for investment wealth statement

--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -369,7 +369,7 @@
 
   .serviceHeaderW {
     font-size: 10pt;
-    color: purple !important;
+    color: rgb(126, 84, 117) !important;
     font-family: 'Mark Pro Bold';
   }
 
@@ -411,7 +411,7 @@
   }
 
   .InvestmentDetailW td span {
-    color: purple !important;
+    color: rgb(126, 84, 117) !important;
     font-family: 'Mark Pro Regular';
   }
 
@@ -431,7 +431,7 @@
   .card-body-header-w {
     font-size: 14pt;
     font-family: 'Mark Pro Bold';
-    color: black !important;
+    color: rgb(126, 84, 117) !important;
   }
 
   .card-body-header-name-w {
@@ -691,7 +691,7 @@
   }
 
   .text-success-w {
-    color: purple !important;
+    color: rgb(126, 84, 117) !important;
   }
 
   .InvestmentProdDesc {
@@ -701,7 +701,7 @@
   }
 
   .InvestmentProdDescW {
-    color: purple !important;
+    color: rgb(126, 84, 117) !important;
     font-family: 'Mark Pro Bold';
     font-size: 12pt;
   }
