--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -434,6 +434,13 @@
     color: rgb(126, 84, 117) !important;
   }
 
+  .card-body-header-name-dear {
+    font-size: 11pt;
+    color: #000000 !important;
+    font-weight: bolder;
+    font-family: 'Mark Pro Bold';
+  }
+
   .card-body-header-name-w {
     font-size: 14pt;
     color: black !important;
