--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -411,6 +411,13 @@
     font-family: sans-serif;
 }
 
+.card-body-header-name-dear {
+    font-size: 11pt;
+    color: #000000 !important;
+    font-weight: bolder;
+    font-family: 'Mark Pro Bold';
+}
+
 .card-body-sub-header {
     font-size: 12pt;
     color: #005b00 !important;
@@ -958,3 +965,9 @@ hr {
     }
   }
 
+
+.card-body-header-w {
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: rgb(126, 84, 117) !important;
+}
