--- a/GenerateStatementRenderEngine/Resources/css/ltr.css
+++ b/GenerateStatementRenderEngine/Resources/css/ltr.css
@@ -1,4 +1,25 @@
-  .show-sidebar .nav-icon,
+@font-face {
+    font-family: 'Mark Pro Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Mark Pro Regular'), url('../fonts/MARKPRO.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Mark Pro Medium';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Mark Pro Medium'), url('../fonts/MARKPROMEDIUM.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Mark Pro Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Mark Pro Bold'), url('../fonts/MARKPROBOLD.woff') format('woff');
+}
+  
+.show-sidebar .nav-icon,
   .side-bar-container:hover .nav-icon,
   .side-bar-logo,
   .side-bar-footer,
@@ -269,6 +290,589 @@
     overflow-x: hidden;
   }
 
+.CustomerDetails {
+    font-size: 8pt;
+    text-align: left;
+    font-family: 'Mark Pro Medium';
+    height: 110px;
+}
+
+    .CustomerDetails p {
+        margin-bottom: 0.25rem !important;
+    }
+
+.ClientDetails {
+    font-size: 8pt;
+    text-align: left;
+    font-family: 'Mark Pro Medium';
+}
+
+    .ClientDetails p {
+        margin-bottom: 0.25rem !important;
+    }
+
+.BranchDetails {
+    font-size: 8pt;
+    text-align: right;
+    font-family: 'Mark Pro Medium';
+    height: 110px;
+}
+
+.ConactCenterDiv {
+    font-size: 8pt;
+    font-family: 'Mark Pro Medium';
+    text-align: right;
+    padding-right: 1.25rem;
+}
+
+.customTable td {
+    padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+.customTable th {
+    padding: 0px 25px;
+    font-size: 8pt;
+}
+
+.InvestorPermanaceTable td {
+    padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
+}
+
+.ServicesDiv {
+    background-color: #f3f3f3;
+    height: 200px;
+    font-family: 'Mark Pro Regular';
+    padding: 1.5rem !important;
+    font-size: 8pt;
+}
+
+.ServicesDiv250 {
+    background-color: #f3f3f3;
+    height: 250px;
+    font-family: 'Mark Pro Regular';
+    padding: 1.5rem !important;
+    font-size: 8pt;
+}
+
+    .ServicesDiv p {
+        margin-bottom: 0.5rem !important;
+    }
+
+.serviceHeader {
+    font-size: 10pt;
+    color: #2d6444 !important;
+    font-family: 'Mark Pro Bold';
+}
+
+.LoanTransactionTable th {
+    background-color: #1c6a41 !important;
+    color: #fff;
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+}
+
+.LoanTransactionTable tbody {
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+}
+
+.InvestmentBreakdown thead {
+    background-color: #1c6a41 !important;
+    color: #fff;
+    font-family: 'Mark Pro Regular';
+}
+
+.InvestmentBreakdown tbody {
+    font-family: 'Mark Pro Regular';
+}
+
+    .InvestmentBreakdown tbody tr:nth-of-type(odd) {
+        background-color: #f3f3f3 !important;
+    }
+
+.InvestmentDetail td span {
+    color: #005b00 !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.card-body-header {
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: #2d6444 !important;
+}
+
+.card-body-header-name {
+    font-size: 14pt;
+    color: #2d6444 !important;
+    font-weight: bolder;
+    font-family: sans-serif;
+}
+
+.card-body-header-name-dear {
+    font-size: 11pt;
+    color: #000000 !important;
+    font-weight: bolder;
+    font-family: 'Mark Pro Bold';
+}
+
+.card-body-sub-header {
+    font-size: 12pt;
+    color: #005b00 !important;
+    font-family: 'Mark Pro Medium';
+    padding: 0px 25px;
+}
+
+.payment-due-header {
+    font-size: 12pt;
+    color: #005b00 !important;
+    font-family: 'Mark Pro Regular';
+    padding: 0px 25px;
+}
+
+.card-body-sub-header2 {
+    font-size: 10pt;
+    font-family: 'Mark Pro Regular';
+    padding: 0px 25px;
+}
+
+.TotalAmountDetailsDiv {
+    background-color: #2d6444 !important;
+    padding: 10px 25px;
+    height: 60px;
+    color: #fff !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.InvestmentClosingBalanceDiv {
+    margin-top: 0.5rem !important;
+    padding-left: 25px;
+    margin-bottom: .25rem !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.Investment-nav-tabs {
+    font-family: 'Mark Pro Regular';
+}
+
+    .Investment-nav-tabs a {
+        font-family: 'Mark Pro Regular';
+        font-size: 8pt;
+    }
+
+.w-12 {
+    width: 12%;
+}
+
+.w-13 {
+    width: 13%;
+}
+
+.w-15 {
+    width: 15%;
+}
+
+.w-35 {
+    width: 35%;
+}
+
+.w-40 {
+    width: 40%;
+}
+
+.fnt-8pt {
+    font-size: 8pt !important;
+}
+
+.fnt-10pt {
+    font-size: 10pt !important;
+}
+
+
+.fnt-12pt {
+    font-size: 12pt !important;
+}
+
+.fnt-14pt {
+    font-size: 14pt !important;
+}
+
+.ht-20 {
+    height: 20px;
+}
+
+.ht-30 {
+    height: 30px;
+}
+
+.ht-35 {
+    height: 35px;
+}
+
+.ht-60 {
+    height: 60px;
+}
+
+.ht-70 {
+    height: 70px;
+}
+
+.ht-130px {
+    height: 130px;
+}
+
+.ht-150px {
+    height: 150px;
+}
+
+.ptb-10_plr-25 {
+    padding: 10px 25px;
+}
+
+.ptb-5_plr-25 {
+    padding: 5px 25px;
+}
+
+.ptb-0_plr-25 {
+    padding: 0px 25px;
+}
+
+.pt-80px {
+    padding-top: 80px;
+}
+
+.InvestmentPermanaceDiv {
+    background-color: #f3f3f3;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.InvestorPermanaceTable {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Mark Pro Regular';
+}
+
+.customTable {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+.pl-25px {
+    padding-left: 25px !important;
+}
+
+.pl-35px {
+    padding-left: 35px !important;
+}
+
+.pr-35px {
+    padding-right: 35px !important;
+}
+
+.ftr {
+    /*position: fixed;*/
+    bottom: 0;
+    background-color: white;
+    width: 100%;
+    /*border-top: thin solid #e1e1e1;*/
+    height: 50px;
+    line-height: 25px;
+}
+
+.ftr-lt-span1 {
+    float:left;
+    margin-left: 1.75rem !important;
+}
+
+.ftr-rt-span1 {
+    float: right;
+    margin-right: 1.75rem !important;
+}
+
+.ftr-rt-span2 {
+    float: right;
+    margin-right: 1.75rem !important;
+    color: #666666;
+    font-size: 7pt;
+    font-family: 'Mark Pro Regular'
+}
+
+.ftr-div {
+    color: #666666;
+    font-size: 7pt;
+    font-family: 'Mark Pro Regular'
+}
+
+.bg-success-new {
+    background-color: #2d6444 !important;
+}
+
+.eConfirm-logo-container {
+    position: relative;
+    float: left !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.eConfirm-logo-date {
+    position: absolute;
+    bottom: 6px;
+    font-size: 8pt;
+    padding-left: 1.25rem !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.paymentDueHeaderBlock {
+    background-color: #1c6a41 !important;
+    text-align: center;
+    /*padding-top: .5rem !important;
+    height: 30px;*/
+    color: white;
+    width: 20%;
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+    line-height: 30px;
+}
+
+.paymentDueFooterBlock {
+    background-color: #f3f3f3 !important;
+    text-align: center;
+    /*padding-top: .5rem !important;
+    height: 30px;*/
+    width: 20%;
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+    line-height: 30px;
+}
+
+.text-success {
+    color: #005b00 !important;
+}
+
+.InvestmentProdDesc {
+    color: #005b00 !important;
+    font-family: 'Mark Pro Bold';
+    font-size: 12pt;
+}
+
+#HomeLoanDetailTable tr:first-child td {
+    font-family: 'Mark Pro Bold';
+    color: #005b00 !important;
+    padding-bottom: .5rem !important;
+    font-size: 12pt;
+}
+
+#PersonalLoanDetailTable tr:first-child td {
+    font-family: 'Mark Pro Bold';
+    color: #005b00 !important;
+    padding-bottom: .5rem !important;
+    font-size: 12pt;
+}
+
+.ExplanatoryNotes {
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+.LoanAmountDetailsDiv {
+    background-color: #2d6444 !important;
+    padding: 10px 25px;
+    height: 60px;
+    color: #fff !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.NedbankPersonalLoanTxt {
+    color: #005b00 !important;
+    font-family: 'Mark Pro Bold' !important;
+    font-size: 12pt !important;
+}
+
+.LoanTransactionTable tbody tr:nth-of-type(odd) {
+    background-color: #f3f3f3 !important;
+}
+
+.SpecialMessageDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 9pt;
+}
+
+.SpecialMessageHeader {
+    font-size: 9pt;
+    font-family: 'Mark Pro Medium';
+}
+
+.SpecialMessageDiv p {
+    margin-bottom: 0.25rem !important;
+}
+
+.InsuranceMessageDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 9pt;
+}
+
+    .InsuranceMessageDiv p {
+        margin-bottom: 0.25rem !important;
+    }
+
+.CustomerCellNoDiv {
+    font-size: 8pt;
+    font-family: 'Mark Pro Medium';
+    text-align: left;
+    padding-left: 1.25rem;
+}
+
+.Personalloan-nav-tabs {
+    font-family: 'Mark Pro Regular';
+}
+
+    .Personalloan-nav-tabs a {
+        font-family: 'Mark Pro Regular';
+        font-size: 8pt;
+    }
+
+.PersonalLoanDetailDiv {
+    background-color: #f3f3f3;
+    padding: 10px 0px;
+}
+
+.HomeLoanDetailDiv {
+    background-color: #f3f3f3;
+    padding: 10px 0px;
+}
+
+.NedbankHomeLoanTxt {
+    color: #005b00 !important;
+    font-family: 'Mark Pro Bold' !important;
+    font-size: 12pt !important;
+}
+
+.PaymentDueSpecialMessageDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 9pt;
+    background-color: #2d6444 !important;
+    padding: 5px 25px;
+    color: #fff !important;
+}
+
+    .PaymentDueSpecialMessageDiv p {
+        margin-bottom: 0.25rem !important;
+    }
+
+
+.Homeloan-nav-tabs {
+    font-family: 'Mark Pro Regular';
+}
+
+    .Homeloan-nav-tabs a {
+        font-family: 'Mark Pro Regular';
+        font-size: 8pt;
+    }
+
+.height110px {
+    height: 110px;
+}
+
+.height130px {
+    height: 130px;
+}
+
+.ReminderDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+    .ReminderDiv p {
+        margin-bottom: 0.25rem !important;
+    }
+
+    .ReminderDiv a {
+        color: black;
+    }
+
+.NewAlertDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+    .NewAlertDiv p {
+        margin-bottom: 0.5rem !important;
+    }
+
+    .NewAlertDiv a {
+        color: black;
+    }
+
+hr {
+    margin-bottom: 0.25rem !important;
+    margin-top: 0.25rem !important;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+}
+
+.nav-rt-border {
+    border-right: 2px solid #dee2e6 !important;
+}
+
+.JoinGreenbacks-li-bg {
+    background-color: #153527;
+    color: white;
+}
+
+    .JoinGreenbacks-li-bg a {
+        width: 100%;
+        text-decoration: none;
+    }
+
+.UseGreenbacks-li-bg {
+    background-color: #679e36;
+    color: white;
+}
+
+    .UseGreenbacks-li-bg a {
+        width: 100%;
+        text-decoration: none;
+    }
+
+.ContactUs-li-bg {
+    background-color: #bfbfbf;
+    color: #737373;
+}
+
+.OnlyBorderRight {
+    border-right: 1px solid #dee2e6 !important;
+    border-top: 0 !important;
+    border-bottom: 0 !important;
+    border-left: 0 !important;
+}
+
+.GraphContent {
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+.TotalRewardPointsSpan {
+    border-radius: 50% !important;
+    background-color: #2d6444 !important;
+    display: inline-block;
+    width: 5rem;
+    height: 5rem;
+    margin: .25rem;
+    line-height: 80px;
+    color: white;
+    font-family: 'Mark Pro Medium';
+}
+
+.GreenbacksContactUsDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 9pt;
+}
+
   @media only screen and (max-width:1024px) {
     .ip-w-5 {
       width: 5%;
@@ -360,4 +964,10 @@
       right: 0px;
     }
   }
+
+.card-body-header-w {
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: rgb(126, 84, 117) !important;
+}
 
