--- a/GenerateStatementRenderEngine/Resources/css/ltr.css
+++ b/GenerateStatementRenderEngine/Resources/css/ltr.css
@@ -18,280 +18,280 @@
     font-weight: normal;
     src: local('Mark Pro Bold'), url('../fonts/MARKPROBOLD.woff') format('woff');
 }
-  
+
 .show-sidebar .nav-icon,
-  .side-bar-container:hover .nav-icon,
-  .side-bar-logo,
-  .side-bar-footer,
-  .side-bar-nav,
-  .side-bar-ul, .side-bar-li, .side-bar-li a,
-  .nav-title,
-  .submenu-container ul li,
-  .content-wapper,
-  .main-container, .main-container-machine,
-  .user-img,
-  .widget, .widget-header-title, .rp-ou-titlt, .legend-text, .legend-color, .legend-value, .legend-row, .pie-container {
+.side-bar-container:hover .nav-icon,
+.side-bar-logo,
+.side-bar-footer,
+.side-bar-nav,
+.side-bar-ul, .side-bar-li, .side-bar-li a,
+.nav-title,
+.submenu-container ul li,
+.content-wapper,
+.main-container, .main-container-machine,
+.user-img,
+.widget, .widget-header-title, .rp-ou-titlt, .legend-text, .legend-color, .legend-value, .legend-row, .pie-container {
     float: left;
-  }
+}
 
-  .side-bar-footer li {
-    font-size: 16px;
-  }
+    .side-bar-footer li {
+        font-size: 16px;
+    }
 
-  .comp-actions {
+.comp-actions {
     right: 15px;
-  }
+}
 
-  .mr-3, .mx-3 {
+.mr-3, .mx-3 {
     margin-right: 1rem;
     margin-left: 0 !important;
-  }
+}
 
-  .pie-legend {
+.pie-legend {
     float: right;
-  }
+}
 
-  .dropdown-menu {
+.dropdown-menu {
     right: 0 !important;
     left: inherit !important;
-  }
+}
 
-  .rp-ou-titlt:after {
+.rp-ou-titlt:after {
     right: 0;
-  }
+}
 
-  .rp-ou-titlt {
+.rp-ou-titlt {
     position: relative;
     margin-right: 10px;
     padding-right: 10px;
-  }
+}
 
-  .widget-header {
+.widget-header {
     text-align: left;
-  }
+}
 
-  .side-bar-container {
+.side-bar-container {
     left: 0px;
-  }
+}
 
-  .collapse-container {
+.collapse-container {
     padding-left: 60px;
-  }
+}
 
-  .uncollapse-container {
+.uncollapse-container {
     padding-left: 190px;
-  }
+}
 
-  .user-img {
+.user-img {
     margin-right: 10px;
-  }
+}
 
-  .filter-popup {
+.filter-popup {
     left: 0px;
     transform: translateX(-100%);
-  }
+}
 
-  .toggle-btn {
+.toggle-btn {
     right: 10px;
-  }
+}
 
-  .btn-tbl-action button {
+.btn-tbl-action button {
     margin-right: 5px;
-  }
+}
 
-  .side-popup {
+.side-popup {
     right: 0;
-  }
+}
 
-  .filter-footer li {
+.filter-footer li {
     border-right-width: 1px;
     border-right-style: solid;
-  }
+}
 
-  .filter-footer li:last-child {
-    border-right: none;
-  }
+    .filter-footer li:last-child {
+        border-right: none;
+    }
 
-  .preview-container {
+.preview-container {
     right: 20px;
-  }
+}
 
-  .hamburger-dashboard {
+.hamburger-dashboard {
     left: 0;
-  }
+}
 
-  .dashboard-inner-container {
+.dashboard-inner-container {
     margin-left: 60px;
-  }
+}
 
-  .dashboard-title {
+.dashboard-title {
     left: 60px;
     width: 480px;
-  }
+}
 
-  .back-home {
+.back-home {
     right: 170px;
-  }
+}
 
-  .widget-action {
+.widget-action {
     right: 10px;
-  }
+}
 
-  .themes {
+.themes {
     right: 15px;
-  }
+}
 
-  .width1 {
+.width1 {
     width: 1%;
-  }
+}
 
-  .width5 {
+.width5 {
     width: 5%;
-  }
+}
 
-  .width8 {
+.width8 {
     width: 8%;
-  }
+}
 
-  .width75 {
+.width75 {
     width: 75%;
-  }
+}
 
-  .width21 {
+.width21 {
     width: 22%;
-  }
+}
 
-  .width22 {
+.width22 {
     width: 22%;
-  }
+}
 
-  .width18 {
+.width18 {
     width: 18%;
-  }
+}
 
-  .width17 {
+.width17 {
     width: 17%;
-  }
+}
 
-  .width10 {
+.width10 {
     width: 10%;
-  }
+}
 
-  .width11 {
+.width11 {
     width: 11%;
-  }
+}
 
-  .width28 {
+.width28 {
     width: 28%;
-  }
+}
 
-  .width12 {
+.width12 {
     width: 12%;
-  }
+}
 
-  .width13 {
+.width13 {
     width: 13%;
-  }
+}
 
-  .width15 {
+.width15 {
     width: 15%;
-  }
+}
 
-  .width20 {
+.width20 {
     width: 20%;
-  }
+}
 
-  .width25 {
+.width25 {
     width: 25%;
-  }
+}
 
-  .width35 {
+.width35 {
     width: 35%;
-  }
+}
 
-  .width30 {
+.width30 {
     width: 30%;
-  }
+}
 
-  .width15 {
+.width15 {
     width: 15%;
-  }
+}
 
-  .width33 {
+.width33 {
     width: 33.33%;
-  }
+}
 
-  .width38 {
+.width38 {
     width: 38%;
-  }
+}
 
-  .width40 {
+.width40 {
     width: 40%;
-  }
+}
 
-  .width45 {
+.width45 {
     width: 45%;
-  }
+}
 
-  .width48 {
+.width48 {
     width: 48%;
-  }
+}
 
-  .width50 {
+.width50 {
     width: 50%;
-  }
+}
 
-  .width60 {
+.width60 {
     width: 60%;
-  }
+}
 
-  .width80px {
+.width80px {
     width: 80px;
-  }
+}
 
-  .font14 {
+.font14 {
     font-size: 13px !important;
-  }
+}
 
 .fnt14 {
     font-size: 14px !important;
 }
 
-  .font24 {
+.font24 {
     font-size: 24px;
-  }
+}
 
-  .width70 {
+.width70 {
     width: 70%;
-  }
+}
 
-  .width80 {
+.width80 {
     width: 80%;
-  }
+}
 
-  .width90 {
+.width90 {
     width: 90%;
-  }
+}
 
-  .width95 {
+.width95 {
     width: 95%;
-  }
+}
 
-  .width100 {
+.width100 {
     width: 100% !important;
-  }
+}
 
-  .width340 {
+.width340 {
     width: 340px;
-  }
+}
 
-  .main-container, .main-container-machine {
+.main-container, .main-container-machine {
     overflow-y: auto;
     overflow-x: hidden;
-  }
+}
 
 .CustomerDetails {
-    font-size: 10pt;
+    font-size: 8pt;
     text-align: left;
     font-family: 'Mark Pro Medium';
     height: 110px;
@@ -328,7 +328,7 @@
 .customTable td {
     padding: 0px 25px;
     font-family: 'Mark Pro Regular';
-    font-size: 9pt;
+    font-size: 8pt;
 }
 
 .customTable th {
@@ -343,7 +343,7 @@
 
 .ServicesDiv {
     background-color: #f3f3f3;
-    height: 235px;
+    height: 200px;
     font-family: 'Mark Pro Regular';
     padding: 1.5rem !important;
     font-size: 8pt;
@@ -357,9 +357,9 @@
     font-size: 8pt;
 }
 
-    .ServicesDiv p {
-        margin-bottom: 0.5rem !important;
-    }
+.ServicesDiv p {
+    margin-bottom: 0.5rem !important;
+}
 
 .serviceHeader {
     font-size: 10pt;
@@ -586,18 +586,18 @@
 }
 
 .ftr-lt-span1 {
-    float:left;
+    float: left;
     margin-left: 1.75rem !important;
 }
 
 .ftr-rt-span1 {
     float: right;
-    margin-right: 2.75rem !important;
+    margin-right: 1.75rem !important;
 }
 
 .ftr-rt-span2 {
     float: right;
-    margin-right: 2.75rem !important;
+    margin-right: 1.75rem !important;
     color: #666666;
     font-size: 7pt;
     font-family: 'Mark Pro Regular'
@@ -676,7 +676,7 @@
 
 .ExplanatoryNotes {
     font-family: 'Mark Pro Regular';
-    font-size: 9pt;
+    font-size: 8pt;
 }
 
 .LoanAmountDetailsDiv {
@@ -873,97 +873,98 @@ hr {
     font-size: 9pt;
 }
 
-  @media only screen and (max-width:1024px) {
+@media only screen and (max-width:1024px) {
     .ip-w-5 {
-      width: 5%;
+        width: 5%;
     }
 
     .ip-w-10 {
-      width: 10%;
+        width: 10%;
     }
 
     .ip-w-15 {
-      width: 15%;
+        width: 15%;
     }
 
     .ip-w-13 {
-      width: 13%;
+        width: 13%;
     }
 
     .ip-w-20 {
-      width: 20%;
+        width: 20%;
     }
 
     .ip-w-25 {
-      width: 25%;
+        width: 25%;
     }
 
     .ip-w-30 {
-      width: 30%;
+        width: 30%;
     }
 
     .ip-w-35 {
-      width: 35%;
+        width: 35%;
     }
 
     .ip-w-40 {
-      width: 40%;
+        width: 40%;
     }
 
     .ip-w-45 {
-      width: 45%;
+        width: 45%;
     }
 
     .ip-w-50 {
-      width: 50%;
+        width: 50%;
     }
 
     .ip-w-60 {
-      width: 60%;
+        width: 60%;
     }
 
     .ip-w-80 {
-      width: 80% !important;
+        width: 80% !important;
     }
-  }
+}
 
-  @media only screen and (max-width:768px) {
+@media only screen and (max-width:768px) {
     .dashboard-inner-container {
-      margin-left: 0px;
-      width: 100%;
+        margin-left: 0px;
+        width: 100%;
     }
 
     .btn-tbl-action button {
-      margin-right: 3px;
+        margin-right: 3px;
     }
-  }
+}
 
-  @media only screen and (max-width:767px) {
+@media only screen and (max-width:767px) {
 
     .toggle-btn {
-      right: 0;
+        right: 0;
     }
 
     .back-home {
-      right: 45px;
+        right: 45px;
     }
 
     .xs-title {
-      left: 45px;
+        left: 45px;
     }
 
-    .xs-title .icon-filter {
-      right: 15px;
-    }
+        .xs-title .icon-filter {
+            right: 15px;
+        }
 
     .xs-position1 {
-      right: 40px;
+        right: 40px;
     }
 
     .xs-position2 {
-      right: 0px;
+        right: 0px;
     }
-  }
+}
+
 
 .card-body-header-w {
     font-size: 14pt;
@@ -971,3 +972,39 @@ hr {
     color: rgb(126, 84, 117) !important;
 }
 
+.TotalAmountDetailsDivW {
+    background-color: black !important;
+    padding: 10px 25px;
+    height: 60px;
+    color: #fff !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.text-success-w {
+    color: rgb(126, 84, 117) !important;
+}
+
+.InvestmentDetailW td span {
+    color: rgb(126, 84, 117) !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.InvestmentProdDescW {
+    color: rgb(126, 84, 117) !important;
+    font-family: 'Mark Pro Bold';
+    font-size: 12pt;
+}
+
+.InvestmentBreakdownW thead {
+    background-color: black !important;
+    color: #fff;
+    font-family: 'Mark Pro Regular';
+    font-family: 'Mark Pro Regular';
+}
+
+.card-body-header-w {
+    font-size: 11pt;
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: rgb(126, 84, 117) !important;
+}
