Changes for Investment Wealth Statement

--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -491,6 +491,13 @@
     font-family: 'Mark Pro Regular';
   }
 
+  .InvestmentClosingBalDiv {
+    margin-top: 0.5rem !important;
+    padding-left: 25px;
+    margin-bottom: .25rem !important;
+    font-family: 'Mark Pro Regular';
+  }
+
   .Investment-nav-tabs {
     font-family: 'Mark Pro Regular';
   }
