--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -2161,6 +2161,13 @@
         font-family: 'Mark Pro Regular';
     }
 
+    .InvestmentClosingBalDiv {
+        margin-top: 1rem !important;
+        padding-left: 25px;
+        margin-bottom: .25rem !important;
+        font-family: 'Mark Pro Regular';
+    }
+
     .Investment-nav-tabs {
         font-family: 'Mark Pro Regular';
     }
