2319: statement related changes

--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -366,6 +366,12 @@
     font-family: 'Mark Pro Bold';
 }
 
+.serviceHeaderW {
+    font-size: 10pt;
+    color: rgb(126, 84, 117) !important;
+    font-family: 'Mark Pro Bold';
+}
+
 .LoanTransactionTable th {
     background-color: #1c6a41 !important;
     color: #fff;
