Add the Special Message into Widgets and changes for Special Message

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -55,7 +55,8 @@
                   'fa-line-chart fa-lg': widget.WidgetType == 'LineGraph',
                   'fa-pie-chart fa-lg': widget.WidgetType == 'PieChart' || widget.WidgetName == 'CategorySpendRewards',
                   'fa-code fa-code': widget.WidgetName == 'StaticHtml',
-                  'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent'
+                  'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent',
+                  'fa-tags' : widget.WidgetName == 'HomeLoanSummaryTaxPurpose',
               }">
           </span><span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
         </a>
