Add Home Loan Changes

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -56,7 +56,8 @@
                   'fa-pie-chart fa-lg': widget.WidgetType == 'PieChart' || widget.WidgetName == 'CategorySpendRewards',
                   'fa-code fa-code': widget.WidgetName == 'StaticHtml',
                   'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent',
-                  'fa-tags' : widget.WidgetName == 'HomeLoanSummaryTaxPurpose',
+                  'fa-tags': widget.WidgetName == 'HomeLoanSummaryTaxPurpose',
+                  'fa-flag' : widget.WidgetName == 'HomeLoanInstalment'
               }">
           </span><span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
         </a>
