Added the home loan instalment widget in UI

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -57,7 +57,7 @@
                   'fa-code fa-code': widget.WidgetName == 'StaticHtml',
                   'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent',
                   'fa-tags': widget.WidgetName == 'HomeLoanSummaryTaxPurpose',
-                  'fa-flag' : widget.WidgetName == 'HomeLoanInstalment'
+                  'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment'
               }">
           </span><span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
         </a>
