--- a/GenerateStatementRenderEngine/Resources/css/ltr.css
+++ b/GenerateStatementRenderEngine/Resources/css/ltr.css
@@ -1031,6 +1031,10 @@ hr {
     font-size: 10pt;
 }
 
+.SummaryTable {
+    width: 100%;
+}
+
 .margin_left_15 {
     margin-left: 15px !important;
 }
