--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -33,19 +33,19 @@
                   'fa-trophy fa-lg': widget.WidgetName == 'GreenbacksTotalRewardPoints',
                   'fa-image fa-lg' : widget.WidgetName == 'Image',
                   'icon-videoWidget' : widget.WidgetName == 'Video',
-                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary' || widget.WidgetName == 'WealthHomeLoanTotalAmountDetail',
+                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary' || widget.WidgetName == 'WealthHomeLoanTotalAmountDetail' || widget.WidgetName == 'MCAAccountSummary'|| widget.WidgetName == 'WealthMCAAccountSummary',
                   'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation' || widget.WidgetName == 'SpecialMessage' || widget.WidgetName == 'PortfolioReminders',
                   'icon-rp-loss1 fa-lg' : widget.WidgetName == 'InvestmentPortfolioRisk',
                   'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
                   'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance' || widget.WidgetName == 'PersonalLoanPaymentDue',
-                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'InvestmentWealthPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown' || widget.WidgetName == 'WealthHomeLoanAccountsBreakdown',
+                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'InvestmentWealthPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown' || widget.WidgetName == 'WealthHomeLoanAccountsBreakdown' || widget.WidgetName == 'MCATransaction' || widget.WidgetName == 'WealthMCATransaction',
                   'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend' || widget.WidgetName == 'InvestorPerformance' || widget.WidgetName == 'WealthInvestorPerformance',
                   'icon-TransactionMixWidget' : widget.WidgetName == 'TransactionMix',
                   'icon-rp-production1' : widget.WidgetName == 'SpendingTrend',
                   'fa-newspaper-o' : widget.WidgetName == 'NewsAlerts' || widget.WidgetName == 'NedbankService' || widget.WidgetName == 'WealthNedbankService' || widget.WidgetName == 'PortfolioNewsAlerts',
                   'fa-credit-card' : widget.WidgetName == 'CurrentTransaction',
                   'icon-rp-quality1' : widget.WidgetName == 'Top4IncomeSources',
-                  'fa-university' : widget.WidgetName == 'BranchDetails' || widget.WidgetName == 'WealthHomeLoanBranchDetails',
+                  'fa-university' : widget.WidgetName == 'BranchDetails' || widget.WidgetName == 'WealthHomeLoanBranchDetails' || widget.WidgetName == 'WealthMCABranchDetails',
                   'fa-list' : widget.WidgetName == 'ExplanatoryNotes' || widget.WidgetName == 'WealthExplanatoryNotes',
                   'fa-exclamation-circle' : widget.WidgetName == 'PL_InsuranceMessage'  || widget.WidgetName == 'HomeLoanPaymentDueSpecialMsg',
                   'fa-table fa-lg': widget.WidgetType == 'Table' || widget.WidgetName == 'HomeLoanInstalmentDetail',
@@ -57,7 +57,8 @@
                   'fa-code fa-code': widget.WidgetName == 'StaticHtml',
                   'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent',
                   'fa-tags': widget.WidgetName == 'HomeLoanSummaryTaxPurpose' || widget.WidgetName == 'WealthHomeLoanSummaryTaxPurpose',
-                  'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment'
+                  'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment',
+                  'fa-bar-chart' : widget.WidgetName == 'MCAVATAnalysis' || widget.WidgetName == 'WealthMCAVATAnalysis'
               }">
           </span><span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
         </a>
