--- a/GenerateStatementRenderEngine/Resources/css/site.css
+++ b/GenerateStatementRenderEngine/Resources/css/site.css
@@ -1636,6 +1636,114 @@
     cursor: not-allowed;
   }
 
+.mca_custom_table {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+.mca_header_label {
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: rgb(0, 91, 0) !important;
+}
+
+.mca_header_label-w {
+    font-size: 14pt;
+    font-family: 'Mark Pro Bold';
+    color: rgb(128, 84, 119) !important;
+}
+
+.mca_sub_header_label {
+    font-size: 7pt;
+    color: rgb(0, 0, 0) !important;
+    font-family: 'Mark Pro Regular';
+}
+
+.MCADetailDiv {
+    background-color: #f3f3f3;
+    padding: 10px 0px;
+}
+
+.mca_detail_statement_label {
+    color: rgb(0, 91, 0) !important;
+    font-family: 'Mark Pro Bold' !important;
+    font-size: 12pt !important;
+}
+
+.mca_detail_statement_label-w {
+    color: rgb(128, 84, 119) !important;
+    font-family: 'Mark Pro Bold' !important;
+    font-size: 12pt !important;
+}
+
+.mca_custom_table td {
+    padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+.mca_custom_table th {
+    padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
+    color: rgb(0, 0, 0);
+    font-size: 9pt;
+    padding-bottom: 10px !important;
+}
+
+.mca_small_table {
+    width: 40%;
+    border-collapse: collapse;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+    .mca_small_table td {
+        padding: 0px 25px;
+        font-family: 'Mark Pro Regular';
+        font-size: 8pt;
+    }
+
+    .mca_small_table th {
+        padding: 0px 25px;
+        font-family: 'Mark Pro Regular';
+        color: rgb(0, 0, 0);
+        font-size: 9pt;
+        padding-bottom: 10px !important;
+    }
+
+.mca_text_custom_color {
+    color: rgb(0, 91, 0) !important;
+}
+
+.mca_text_custom_color-w {
+    color: rgb(128, 84, 119) !important;
+}
+
+.MCATransactionTable th {
+    background-color: rgb(28, 106, 65) !important;
+    color: rgb(255, 255, 255);
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+}
+
+.MCATransactionTable-W th {
+    background-color: rgb(128, 84, 119) !important;
+    color: rgb(255, 255, 255);
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+}
+
+.MCATransactionTable tbody, .MCATransactionTable-W tbody {
+    font-size: 8pt;
+    font-family: 'Mark Pro Regular';
+}
+
+    .MCATransactionTable tbody tr:nth-of-type(odd), .MCATransactionTable-W tbody tr:nth-of-type(odd) {
+        background-color: #f3f3f3 !important;
+    }
+
   @media only screen and (max-width:1024px) {
     .machine-meta {
       height: 280px;
@@ -2079,14 +2187,14 @@
 
     .serviceHeader {
         font-size: 16px;
-        color: #2d6444 !important;
+        color: rgb(0, 91, 0) !important;
         font-weight: 700;
         font-family: 'Mark Pro Medium';
     }
 
     .serviceHeaderW {
         font-size: 10pt;
-        color: rgb(126, 84, 117) !important;
+        color: rgb(128, 84, 119) !important;
         font-family: 'Mark Pro Bold';
     }
 
@@ -2129,7 +2237,13 @@
     .card-body-header {
         font-size: 18px;
         font-family: 'Mark Pro Bold';
-        color: #2d6444 !important;
+        color: rgb(0, 91, 0) !important;
+    }
+
+    .card-body-header-w {
+        font-size: 18px;
+        font-family: 'Mark Pro Bold';
+        color: rgb(128, 84, 119) !important;
     }
 
     .card-body-header-name {
@@ -2195,6 +2309,10 @@
     .ExplanatoryNotes {
         font-family: 'Mark Pro Regular';
         font-size: 14px;
+    }
+
+    .w-7 {
+        width: 7%;
     }
 
     .w-12 {
