--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -492,6 +492,14 @@
     width: 7%;
 }
 
+.w-5 {
+    width: 5%;
+}
+
+.w-10 {
+    width: 10%;
+}
+
 .w-12 {
     width: 12%;
 }
@@ -502,6 +510,10 @@
 
 .w-15 {
     width: 15%;
+}
+
+.w-20 {
+    width: 20%;
 }
 
 .w-35 {
@@ -1109,13 +1121,13 @@ hr {
 
 .mca_detail_statement_label-w {
     color: rgb(128, 84, 119) !important;
-    font-family: 'Mark Pro Bold' !important;
+    font-family: 'Mark Pro Regular' !important;
     font-size: 12pt !important;
 }
 
 .mca_header_label-w {
     font-size: 14pt;
-    font-family: 'Mark Pro Bold';
+    font-family: 'Mark Pro Regular';
     color: rgb(128, 84, 119) !important;
 }
 
@@ -1132,7 +1144,7 @@ hr {
 
 .mca_small_table {
     width: 40%;
-    border-collapse: collapse;
+    border-collapse: inherit;
     font-family: 'Mark Pro Regular';
     font-size: 8pt;
 }
@@ -1153,7 +1165,7 @@ hr {
 
 .mca_custom_table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: inherit;
     font-family: 'Mark Pro Regular';
     font-size: 8pt;
 }
@@ -1181,6 +1193,7 @@ hr {
     color: rgb(255, 255, 255);
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
+    font-weight: normal !important;
 }
 
 .MCATransactionTable tbody, .MCATransactionTable-W tbody {
@@ -1193,8 +1206,9 @@ hr {
     }
 
 .MCATransactionTable-W th {
-    background-color: rgb(128, 84, 119) !important;
+    background-color: black !important;
     color: rgb(255, 255, 255);
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
+    font-weight: normal !important;
 }
